tests/valid/noPrototype.ts
// @ts-nocheck
class MyClass {
	method() {
		return 5;
	}
}
