tests/invalid/luaTruthinessZero.ts
// @ts-nocheck
if (0) {
	console.log("zero check");
}
